- [+] arch/x86/include/asm/pgtable-3level-types.h
- [M] arch/x86/include/asm/pgtable.h
- [M] arch/x86/Kconfig				[D] add CONFIG_HIGHMEM etc.


Tue Jan 26 10:15:37 CST 2016
- [+] arch/x86/include/asm/pgtable_32_types.h
- [+] arch/x86/include/asm/pgtable_64_types.h
- [+] arch/x86/include/asm/pgtable_types.h	[D] separate types from operations
- [+] include/asm-generic/pgtable.h
- [+] include/asm-generic/pgtable-nopud.h
- [+] include/asm-generic/pgtable-nopmd.h


Wed Jan 27 09:27:12 CST 2016
- [+] Diary/01-27-2016
- [+] mm/Kconfig				[D] PHYS_ADDR_T_64BIT
- [M] include/sandix/types.h			 >  same
- [M] arch/x86/Kconfig
- [M] arch/x86/include/asm/page_32.h		[D] finalize these files
- [M] arch/x86/include/asm/page_64.h		 >  64-bit uses BUG()
- [M] arch/x86/include/asm/page.h
- [M] arch/x86/include/asm/pgtable.h
- [M] include/asm-generic/pgtable.h
- [M] include/asm-generic/pgtable-nopud.h
- [M] include/asm-generic/pgtable-nopmd.h


Thu Jan 28 12:56:08 CST 2016
- [+] include/sandix/ptrace.h			[D] ptrace registers, operations etc.
- [+] include/asm-generic/ptrace.h
- [+] arch/x86/include/asm/ptrace.h
- [+] arch/x86/entry/Makefile			[D] Cool! Now kernel entry points
- [+] arch/x86/entry/entry_32.S
- [M] arch/x86/Makefile
- [M] arch/x86/include/asm/descriptor.h


Sat Jan 30 09:47:23 CST 2016
- [+] arch/x86/kernel/asm-offset.c
- [+] arch/x86/kernel/asm-offset_32.c
- [+] arch/x86/kernel/asm-offset_32.c


Sun Jan 31 20:49:52 CST 2016
- [+] include/sandix/kbuild.h


Wed Feb  3 08:51:10 CST 2016
- [+] include/asm-generic/asm-offset.h		[D] <generared/asm-offset.h>, created in
- [+] arch/x86/include/asm/asm-offset.h		 >  arch/x86/kernel/Makefile, then copied
- [M] arch/x86/kernel/Makefile			 >  into generated directory.


Thu Feb  4 09:56:32 CST 2016
- [M] include/asm-generic/ptrace.h
- [M] arch/x86/include/asm/ptrace.h


Fri Feb  5 10:15:40 CST 2016
- [M] arch/x86/entry/entry_32.S


Tue Feb 16 09:51:28 CST 2016
- [M] arch/x86/kernel/traps.h
- [M] arch/x86/entry/entry_32.S