@@ -475,5 +475,7 @@ Fri Feb  5 10:15:40 CST 2016
 
 
 Tue Feb 16 09:51:28 CST 2016
-- [M] arch/x86/kernel/traps.h
+- [+] arch/x86/kernel/dumpstack.c
+- [+] arch/x86/kernel/process.c
 - [M] arch/x86/entry/entry_32.S
+- [M] arch/x86/kernel/traps.h
